# nockup-prover

./: .gitignore  CLAUDE.me  Cargo.toml  LICENSE  README.md  claude_code_setup.md  github_upload_guide.md  nockapp.toml  prover_files.txt  rust-toolchain.toml
.claude/skills/nockapp-api-design/: PATTERNS.md
prover/hoon/: prover.hoon
prover/src/: main.rs
prover/web/: index.html  prover.js  style.css
test-data/: sample-groth16-proof.txt  sample-verification-key.txt
