toml
[package]
name = "prover"
version = "0.1.0"
edition = "2021"
authors = ["Michael Greene"]
description = "SNARK submission and tracking system for Nockchain"
license = "MIT"

[[bin]]
name = "prover"
path = "prover/src/main.rs"

[dependencies]
# Nockchain core
nockapp = { git = "https://github.com/nockchain/nockchain", branch = "master" }

# HTTP server
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
base64 = "0.22"
anyhow = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
